[tool.isort]
profile = "black"

[tool.poetry]
name = "vtrim"
version = "1.2.0"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.8"
docker = "^5.0.2"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^24.10"
flake8 = "^7.1.1"
isort = "^5.9.3"
mypy = "^1.14"

[tool.poetry.scripts]
vtrim = "vtrim.vtrim:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
